trying to fix background image on ios safari

--- a/src/Index.css
+++ b/src/Index.css
@@ -12,7 +12,7 @@ code {
     monospace;
 }
 
-html {
+/* html {
   background: url(https://res.cloudinary.com/crowandrew/image/upload/w_auto,c_scale/v1603932272/portfolio/Crow_Andrew_-_High_Res_2_n88ggh.png)
     no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -20,4 +20,4 @@ html {
   -o-background-size: cover;
   background-size: cover;
   height: 100%;
-}
+} */
